opam-version: "2.0"
name: "coq-iris-tutorial"
synopsis: "A tutorial for the Iris framework"
maintainer: "The Iris Tutorial Team"
authors: "The Iris Tutorial Team"
license: "MIT"
homepage: "https://github.com/logsem/iris-tutorial"
dev-repo: "git+https://github.com:logsem/iris-tutorial.git"
bug-reports: "https://github.com/logsem/iris-tutorial/issues"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (= "9.0.0") }
  "coq-iris" { (= "dev.2025-07-17.3.adf6beba") | (= "dev") }
  "coq-iris-heap-lang" { (= "dev.2025-07-17.3.adf6beba") | (= "dev") }
]
